<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.printer.example.activity.MainActivity">

    <TextView
        android:id="@+id/tv_ver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="Printer Example Ver: v0.0.1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/command_type" />

            <com.printer.example.view.FlowRadioGroup
                android:id="@+id/rg_cmdtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_cmd_esc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cmdtype_esc" />

                <RadioButton
                    android:id="@+id/rb_cmd_tsc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cmdtype_tsc" />

                <RadioButton
                    android:id="@+id/rb_cmd_cpcl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cmdtype_cpcl" />

                <RadioButton
                    android:id="@+id/rb_cmd_zpl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cmdtype_zpl"
                    android:visibility="visible" />

                <RadioButton
                    android:id="@+id/rb_cmd_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/cmdtype_pin" />
            </com.printer.example.view.FlowRadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/connect_type" />

            <com.printer.example.view.FlowRadioGroup
                android:id="@+id/rg_connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"

                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_connect_bluetooth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Bluetooth" />

                <RadioButton
                    android:id="@+id/rb_connect_wifi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="WiFi" />

                <RadioButton
                    android:id="@+id/rb_connect_usb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="USB"
                    android:visibility="visible" />

                <RadioButton
                    android:id="@+id/rb_connect_com"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="COM"
                    android:visibility="gone" />
            </com.printer.example.view.FlowRadioGroup>

            <Button
                android:id="@+id/btn_connected_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/show_conncected_devices" />

            <TextView
                android:id="@+id/tv_device_selected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray2"
                android:gravity="center"
                android:padding="10dp"
                android:tag="-1"
                android:text="@string/please_connect"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/pb_connect"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_disConnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/disconnect" />

                <Button
                    android:id="@+id/btn_connect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/connect" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray2" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btn_cmd_test"
                    style="@style/main_activity_button"
                    android:layout_weight="1"
                    android:text="Cmd Test"
                    android:enabled="false"
                    android:visibility="gone"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_selftest_print"
                    style="@style/main_activity_button"
                    android:layout_weight="1"
                    android:text="@string/self_test_print"
                    android:enabled="false"/>

                <Button
                    android:id="@+id/btn_txt_print"
                    style="@style/main_activity_button"
                    android:layout_weight="1"
                    android:text="@string/text_print"
                    android:enabled="false"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_img_print"
                    style="@style/main_activity_button"
                    android:layout_weight="1"
                    android:text="@string/image_print"
                    android:enabled="false"/>

                <Button
                    android:id="@+id/btn_barcode_print"
                    style="@style/main_activity_button"
                    android:layout_weight="1"
                    android:text="@string/barcode_print"
                    android:enabled="false"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/btn_template_print"
                    style="@style/main_activity_button"
                    android:layout_weight="1"
                    android:text="@string/template_print"
                    android:enabled="false"/>

                <Button
                    android:id="@+id/btn_beep"
                    style="@style/main_activity_button"
                    android:layout_weight="1"
                    android:text="Beep Test"
                    android:enabled="false"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/btn_all_cut"
                    style="@style/main_activity_button"
                    android:layout_weight="1"
                    android:text="Cutter Test"
                    android:enabled="false"/>

                <Button
                    android:id="@+id/btn_cash_box"
                    style="@style/main_activity_button"
                    android:layout_weight="1"
                    android:text="Cashbox Test"
                    android:enabled="false"/>

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/btn_wifi_setting"
                    style="@style/main_activity_button"
                    android:layout_weight="1"
                    android:text="WiFi Settings"
                    android:enabled="false"/>
                <Button
                    android:id="@+id/btn_wifi_ipdhcp"
                    style="@style/main_activity_button"
                    android:layout_weight="1"
                    android:text="WiFi IP/DHCP"
                    android:enabled="false"/>

            </TableRow>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
