<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        style="@style/Title">

        <include
            android:id="@+id/back"
            layout="@layout/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <TextView
            style="@style/BaseTitleText"
            android:text="@string/wifi_net_settings_ip_dhcp" />

        <TextView
            android:id="@+id/connect_state"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:paddingRight="8dp"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_wifi_set_net_ip_dhcp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi_edit_dhcp" />

                <RadioGroup
                    android:id="@+id/rg_set_net_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_set_net_dhcp_dis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:padding="10dp"
                        android:text="@string/wifi_dhcp_disable" />

                    <RadioButton
                        android:id="@+id/rb_set_net_dhcp_en"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/wifi_dhcp_enable" />
                </RadioGroup>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/wifi_edit_ip" />

                <EditText
                    android:id="@+id/et_set_net_ip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="7"
                    android:digits="0123456789."
                    android:inputType="numberDecimal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/wifi_edit_sub_mask" />

                <EditText
                    android:id="@+id/et_set_net_mask"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="7"
                    android:digits="0123456789."
                    android:inputType="numberDecimal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/wifi_edit_gateway" />

                <EditText
                    android:id="@+id/et_set_net_gateway"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="7"
                    android:digits="0123456789."
                    android:inputType="numberDecimal"/>

            </LinearLayout>


            <Button
                android:id="@+id/tx_set_net_save_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:clickable="true"
                android:onClick="onClick"
                android:padding="15dp"
                android:text="@string/wifi_savechange" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
