<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        style="@style/Title">

        <include
            android:id="@+id/back"
            layout="@layout/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <TextView
            style="@style/BaseTitleText.White"
            android:text="@string/wifi_settings"
             />

        <TextView
            android:id="@+id/connect_state"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:paddingRight="8dp"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_wifi_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="10dp"
            android:text="@string/refresh_wifi"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_mode"
                android:textSize="16dp" />

            <Spinner
                android:id="@+id/sp_wifi_set"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>


    <ListView
        android:id="@+id/lv_set_wifi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
